# CURSOR_DEMOS

./: README.md  snowsql_rt.log_bootstrap
.cursor/rules/: agent-configuration.mdc  cortex-search.mdc  data-generation.mdc  file-organisation.mdc  project-overview.mdc  semantic-views.mdc  sql-patterns.mdc
CORTEX_SEARCH_JPMC/: .gitignore  .pre-commit-config.yaml  GETTING_STARTED.md  JPMC_Cortex_Search_Lab.md  Makefile  README.md  WORKSPACE_SETUP.md  env.template  pyproject.toml  requirements.txt  setup.py
CORTEX_SEARCH_JPMC/.cursor/: docs.md  rules.md
CORTEX_SEARCH_JPMC/data/: README.md  sample_market_research.csv
CORTEX_SEARCH_JPMC/sql/: 01_setup_database.sql  02_create_tables.sql  03_create_search_services.sql
CORTEX_SEARCH_JPMC/src/: __init__.py
CORTEX_SEARCH_JPMC/src/config/: __init__.py  settings.py
CORTEX_SEARCH_JPMC/src/database/: __init__.py  connection.py
CORTEX_SEARCH_JPMC/src/search/: __init__.py
CORTEX_SEARCH_JPMC/src/streamlit_app/: __init__.py  main.py
CORTEX_SEARCH_JPMC/src/utils/: __init__.py
CORTEX_SEARCH_JPMC/tests/: __init__.py  conftest.py
DATA_ENGINEERING_DEMOS/: .gitignore  CONNECTION_SETUP.md  CUSTOMER_EMAIL_TEMPLATE.md  DEMO_SUMMARY.md  GIT_SETUP_INSTRUCTIONS.md  README.md  SETUP.md  config_archived.py  requirements.txt  setup_archived.py
DATA_ENGINEERING_DEMOS/demos/: README.md  snowsql_rt.log_bootstrap
DATA_ENGINEERING_DEMOS/demos/factset_etf_iceberg/: CONSOLIDATED_SETUP.sql  QUICK_START.md  README.md  RUN_DEMO.sh  SETUP_WEB_UI.md  SIMPLE_SETUP.sql  WORKAROUND_LOCAL_COPY.sql  config_factset.sql
DATA_ENGINEERING_DEMOS/demos/factset_etf_iceberg/docs/: demo_script.md  pipeline_comparison.md  using_factset_share.md
DATA_ENGINEERING_DEMOS/demos/factset_etf_iceberg/scripts/: run_all_pipelines.sql
DATA_ENGINEERING_DEMOS/demos/factset_etf_iceberg/sql/: 00_initialization.sql  01_pipeline_stream_task_iceberg.sql  02_pipeline_stream_task_iceberg_parquet.sql  99_cleanup.sql  simulate_changes.sql
DATA_ENGINEERING_DEMOS/docs/: architecture.md  demo_script.md  setup_guide.md
DATA_ENGINEERING_DEMOS/sql/: 00_setup_infrastructure.sql  99_cleanup.sql
DATA_ENGINEERING_DEMOS/src_archived_python/: __init__.py
DATA_ENGINEERING_DEMOS/src_archived_python/config/: __init__.py
DATA_ENGINEERING_DEMOS/src_archived_python/data_sharing/: __init__.py  monitoring.py  shares.py
DATA_ENGINEERING_DEMOS/src_archived_python/pipelines/: __init__.py  ingestion.py  transformation.py  validation.py
DATA_ENGINEERING_DEMOS/src_archived_python/utils/: __init__.py  date_utils.py  logging_utils.py  snowpark_session.py
DATA_ENGINEERING_DEMOS/tests/: __init__.py  test_pipelines.py
JPMC_MARKETS_AI_DEMO_PACKAGE/: DEMO_PRESENTER_NOTES.md  DEMO_SCENARIO_SCRIPTS.md  DUAL_TOOL_AGENT_SETUP.md  JPMC_MARKETS_AI_DEMO_COMPLETE.md  MANUAL_AGENT_SETUP.md  README_DEMO_SETUP.md  agent_setup_instructions.md  cleanup_demo.py  deploy_dual_tool_demo.py  deploy_markets_ai_demo.py  requirements.txt
JPMC_MARKETS_AI_DEMO_PACKAGE/snowflake_intelligence_agents/: earnings_analysis_agent.yaml  thematic_research_agent.yaml
cursor_rules/: README.md  agent-configuration.md  cortex-search.md  demo-scenarios.md  project-overview.md  snowflake-standards.md  sql-patterns.md
markets_ai_demo/cursor_rules/: data-generation.md  demo-scenarios.md  file-organisation.md  python-patterns.md  semantic-views.md  snowflake-standards.md
markets_ai_demo/docs/: demo_scripts.md  setup_guide.md
markets_ai_demo/scripts/: deploy_dual_tool_demo.py
